--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,9 +48,15 @@ jobs:
         run: |
           brew tap "${{ github.repository }}" "https://github.com/${{ github.repository }}.git"
 
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.MAIAO_RELEASE_APP_ID }}
+          private-key: ${{ secrets.PAIAO_RELEASE_SIGNING_KEY }}
+
       - name: Bump formulae
         uses: Homebrew/actions/bump-formulae@master
         continue-on-error: true
         with:
-          token: ${{ secrets.HOMEBREW_CORE_REPO_WORKFLOW_TOKEN }}
-          formulae: ${{ github.event.inputs.formulae || env.FORMULAE }}
+          token: ${{ steps.app-token.outputs.token }}
+          formulae: maiao
