further improve it
Change-Id: I349d6b397964bae8a9f2da152e49c5110022d8f3

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,4 +59,4 @@ jobs:
         continue-on-error: true
         with:
           token: ${{ steps.app-token.outputs.token }}
-          formulae: maiao
+          formulae: "${{ github.repository }}/maiao"
