--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,7 +53,8 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v2
-      fetch-depth: 0
+      with:
+        fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v2
