--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -62,6 +62,7 @@ jobs:
         go-version: 1.21
 
     - name: Build
+      shell: bash
       run: |
         function build(){
           echo "building for arch=${2}"
