use self script
Change-Id: I25b1d7cfabf20555e7ac310e935fbffb0556e8a6

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   call-build:
-    uses: adevinta/maiao/.github/workflows/go.yml@main
+    uses: ${{ github.repository }}/.github/workflows/go.yml@${{ github.ref_name }}
 
   publish:
     runs-on: ubuntu-latest
