--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   call-build:
-    uses: ${{ github.repository }}/.github/workflows/go.yml@${{ github.ref_name }}
+    uses: ${{ github.repository }}/.github/workflows/go.yml@${{ github.sha }}
 
   publish:
     runs-on: ubuntu-latest
