use script main
Change-Id: I138a6333be4b62bc69f6601f8cf077fd464298de

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   call-build:
-    uses: ${{ github.repository }}/.github/workflows/go.yml@${{ github.sha }}
+    uses: "${{ github.repository }}/.github/workflows/go.yml@main"
 
   publish:
     runs-on: ubuntu-latest
