use local script
Change-Id: I8c6ce546e7d0f825f5384f0c61b25ad801d4e09f

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   call-build:
-    uses: "${{ github.repository }}/.github/workflows/go.yml@main"
+    uses: "./.github/workflows/go.yml"
 
   publish:
     runs-on: ubuntu-latest
