fix bump script
Change-Id: I6da8a973d05bca75d99ec29d633a6a49ec04238d

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -60,3 +60,4 @@ jobs:
           This pull request was automatically created by the Maiao release workflow
           when the ${{ github.ref_name }} tag was pushed.
         branch: "bump/homebrew/${{ github.ref_name }}"
+        base: main
